...
    },
    "分隔音節" : {
      "localizations" : {
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "分隔音节"
          }
        }
      }
    },
    "切到 UTUVO Type 鍵盤" : {
      "localizations" : {
...
    },
    "切換鍵盤版面" : {
      "localizations" : {
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "切换键盘布局"
          }
        }
      }
    },
    "刪除" : {
      "localizations" : {
...
    },
    "歷史" : {
      "localizations" : {
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "历史"
          }
        }
      }
    },
    "每次用鍵盤講話" : {
      "localizations" : {
...
            "state" : "translated",
            "value" : "确认“允许完全访问”已打开，并且在 UTUVO Type 里允许了麦克风。"
          }
        }
      }
    },
    "空格" : {
      "localizations" : {
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "空格"
          }
...
    },
    "聽寫" : {
      "localizations" : {
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "听写"
          }
        }
      }
    },
    "聽寫語言：%@" : {
      "localizations" : {
...
    },
    "英文鍵盤" : {
      "localizations" : {
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "英文键盘"
          }
        }
      }
    },
    "英文（美國）" : {
      "localizations" : {
...
    },
    "設定" : {
      "localizations" : {
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "设置"
          }
        }
      }
    },
    "設定 → 一般 → 鍵盤 → 鍵盤 → 加入新鍵盤 → UTUVO Type" : {
      "extractionState" : "stale",
...
    },
    "語音" : {
      "localizations" : {
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "语音"
          }
        }
      }
    },
    "語音工作階段出錯" : {
      "localizations" : {
...
    },
    "點一下開始說" : {
      "localizations" : {
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "点一下开始说"
          }
        }
      }
    },
    "點光球" : {
      "localizations" : {
...
